<resources>
    <string name="app_name">Smart Incubator</string>
    <string name="app_slogon">Find new ways of boosting your startup</string>

    <string name="login_text">Sign In</string>
    <string name="register_text">Register</string>
    <string name="username_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_dont_have_account">Register</string>
    <string name="login_dont_have_account_long">Don\'t have account ?</string>
    <string name="login_action">Login right now ...</string>
    <string name="register_action">Registering right now ...</string>


    <string name="register_have_account">Already a member ?</string>
    <string name="register_have_account_short">Login</string>
    <string name="title_activity_register">Sign in</string>
    <string name="activity_register_button">Create</string>
    <string name="field_requierd">This field is requierd</string>
    <string name="user_informations_activity">User Informations</string>
    <string name="mentor_informations_activity">Mentor Informations</string>
    <string name="startup_informations_activity">Startup Informations</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="Sexe">Sexe :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="startup">Startup</string>
    <string name="mentor">Mentor</string>
    <string name="account_type">Account type:</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading...</string>

    <string name="meeting_informations">Meeting Informations:</string>
    <string name="meeting_place">Meeting Place</string>
    <string name="meeting_set_date">Set Date</string>
    <string name="meeting_set_time">Set Time</string>
    <string name="meeting_status">Status</string>
    <string name="meeting_status_accept">Accept</string>
    <string name="meeting_status_refuse">Refuse</string>
    <string name="see_profile">See Profile</string>

    <string name="startup_name">Startup name</string>
    <string name="associate_startup">Association(optional)</string>
    <string name="description_startup">Startup description</string>
    <string name="Website_startup">Startup website(optional)</string>
    <string name="Facebook_startup">Startup facebook(optional)</string>
    <string name="date_incubation_startup">Date of incubation</string>
    <string name="juridique_status_startup">Juridique status</string>
    <string name="creation_date_startup">Creation date of the startup</string>
    <string name="number_employees_startup">Number of employees</string>
    <string name="objective_startup">Startup objective(optional)</string>
    <string name="fond_startup">Startup fond</string>
    <string name="chiffre_startup">Startup chiffre</string>
    <string name="domain_startup">Startup domain</string>
    <string name="need_startup">Startup need</string>


    <string name="last_name_mentor">Mentor Last Name</string>

    <string name="first_name_mentor">Mentor First Name</string>

    <string name="city_mentor">Mentor City</string>
    <string name="specialty_mentor">Mentor Specialty</string>
    <string name="email_mentor">Mentor Email</string>
    <string name="phone_number_mentor">Mentor Phone Number</string>


    <!-- Strings related to login -->

    <string name="error_internet_required">You need to be connected to the internet</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_password_required">The password field is required</string>
    <string name="error_field_username_required">The email field is required</string>
    <string name="error_action_registration_failed">Register Failed</string>
    <string name="error_action_registration_sucessed">Registered Successfully!</string>
    <string name="error_action_loging_failed">Login Failed</string>
    <string name="error_action_login_sucessed">Logged Successfully!</string>
    <string name="startups_name_fragment">Startups</string>
    <string name="mentors_name_fragments">Mentors</string>
    <string name="messages_name_fragments">Messages</string>
    <string name="meetings_name_fragments">Meetings</string>
    <string name="toolbar_settings_name">Settings</string>
    <string name="toolbar_search_name">Search</string>
    <string name="toolbar_logout_name">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="message_edit_text">Type a message</string>


    <string name="update">Update</string>
    <string name="loading_data">Loading your data …</string>
    <string name="search_type">Search type:</string>
    <string name="search">Search by need or speciality</string>


    <string name="empty_meeting">Oh ! it\'s look like that you have no meetings</string>
    <string name="empty_messages">Oh ! it\'s look like that you have no messages</string>
    <string name="empty_mentors">Oh ! it\'s look like that their is no mentors</string>
    <string name="empty_startups">Oh ! it\'s look like that their is no startups</string>


</resources>
