<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UserInformationsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbare"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:titleTextColor="@color/colorFlatWhite"
        app:subtitleTextColor="@color/colorFlatWhite"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:title="@string/user_informations_activity"

        android:theme="@style/Theme.AppCompat.Light"
        app:popupTheme="@style/Theme.AppCompat.Light"/>


    <ScrollView
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="24dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorFlatWhite">

            <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/first_name"
                />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_name_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorFlatWhite"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/last_name"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorFlatWhite"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username_text"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/age_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorFlatWhite"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/age_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/age"
                    />


            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/im"
                    android:textSize="24sp"
                    android:layout_gravity="center_vertical"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/male_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textAppearance="?android:textAppearanceMedium" />
                    <RadioButton
                        android:id="@+id/female_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>




            </LinearLayout>

            <TextView
                android:id="@+id/sexe_requierd_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/field_requierd"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_type"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/startup_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/startup"
                        android:textAppearance="?android:textAppearanceMedium" />
                    <RadioButton
                        android:id="@+id/mentor_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mentor"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>





            </LinearLayout>

            <TextView
                android:id="@+id/account_type_requierd_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/field_requierd"
                android:visibility="gone"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/submit_action_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:textColor="@color/colorFlatWhite"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                />


        </LinearLayout>




    </ScrollView>


</RelativeLayout>