<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_name"
            android:textColor="@color/colorFlatWhite"
            android:textSize="32dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="248dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/colorFlatWhite"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/login_text"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="248dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/colorFlatWhite"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/register_text"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>